# reeltime

./: .gitignore  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml  pytest.ini
movies/: admin.py  get_timezone.py  models.py  permissions.py  serializers.py  tasks.py  urls.py  validations.py  views.py
movies/migrations/: 0001_initial.py  0002_director_biography.py  0002_director_movie_description_movie_directors.py  0002_initial.py  0003_movie_publish_in.py  0003_movie_status.py  0003_usermovierelation.py  0004_genre.py  0004_movie_owner_movie_spectators.py  0005_alter_usermovierelation_rating.py  0005_movie_genres.py  0006_movie_rating.py  0007_alter_movie_rating.py  0008_alter_usermovierelation_rating.py  0009_alter_usermovierelation_rating.py  0010_usermovierelation_like.py  0011_movie_likes.py  0012_alter_usermovierelation_like.py  0013_alter_usermovierelation_rating.py  0014_alter_director_biography_and_more.py
movies/tests/: test_api.py
reeltime/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
tests/: fixtures.py
tests/movies/: movie_delete_test.py  movie_list_test.py  movie_patch_test.py  movie_post_test.py  movie_put_test.py  movie_retrieve_test.py  test_api.py
users/: serializers.py
users/migrations/: 0001_initial.py
