[tool.poetry]
name = "reeltime"
version = "0.1.0"
description = ""
authors = ["Grisha <grishamalanchuk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2"
djangorestframework = "^3.14.0"
python-decouple = "^3.8"
pytest-django = "^4.5.2"
drf-spectacular = "^0.26.1"
django-debug-toolbar = "^4.0.0"
djoser = "^2.1.0"
psycopg2 = "^2.9.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
