[tool.poetry]
name = "reeltime"
version = "0.1.0"
description = ""
authors = ["Grisha"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2"
djangorestframework = "^3.14.0"
python-decouple = "^3.8"
drf-spectacular = "^0.26.2"
django-debug-toolbar = "^4.0.0"
djoser = "^2.2.0"
psycopg2-binary = "^2.9.6"
celery = "^5.2.7"
redis = "^4.5.4"
flower = "^1.2.0"
celery-singleton = "^0.3.1"


[tool.poetry.group.dev.dependencies]
pytest-django = "^4.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
